--- a/index.html
+++ b/index.html
@@ -19,9 +19,46 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
 
         <!-- Main css -->
-        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <h1>Project 02</h1>
+        <main style="height: 2000px">
+            <!-- Header -->
+            <header class="header fixed">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- Logo -->
+                        <img
+                            src="./assets/img/logo.svg"
+                            alt="Lesson."
+                            class="logo"
+                        />
+
+                        <!-- Nav -->
+                        <nav class="nav">
+                            <ul>
+                                <li class="active">
+                                    <a href="#!">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Courses</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Pricing</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Reviews</a>
+                                </li>
+                            </ul>
+                        </nav>
+
+                        <!-- Action -->
+                        <div class="action">
+                            <a href="#!" class="btn sign-up-btn">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </main>
     </body>
 </html>
