--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                         <!-- Hero right -->
                         <div class="content-block">
-                            <h1 class="heading">
+                            <h1 class="heading lv1">
                                 Learn without limits and spread knowledge.
                             </h1>
                             <p class="desc">
@@ -147,6 +147,173 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Popular -->
+            <div class="popular">
+                <div class="main-content">
+                    <!-- Popular top -->
+                    <div class="popular-top">
+                        <div class="info">
+                            <h2 class="heading lv2">Our popular courses</h2>
+                            <p class="desc">
+                                Build new skills with new trendy courses and
+                                shine for the next future career.
+                            </p>
+                        </div>
+
+                        <div class="controls">
+                            <button class="control-btn center">
+                                <svg
+                                    width="7"
+                                    height="13"
+                                    viewBox="0 0 7 13"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M6.5 0.5L0.5 6.5L6.5 12.5"
+                                        stroke="currentColor"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                            <button class="control-btn center">
+                                <svg
+                                    width="7"
+                                    height="13"
+                                    viewBox="0 0 7 13"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M0.5 0.5L6.5 6.5L0.5 12.5"
+                                        stroke="currentColor"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Popular bottom -->
+                    <div class="course-list">
+                        <!-- Course item 1 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-1.jpg"
+                                    alt="Basic web design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title line-clamp">
+                                        <a href="#!">Basic web design</a>
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/icons/star.svg"
+                                            alt="Star"
+                                        />
+                                        <span class="value">4.5</span>
+                                    </div>
+                                </div>
+
+                                <p class="desc line-clamp">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn book-btn">
+                                        Book now
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Course item 2 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-2.jpg"
+                                    alt="Basic web design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title line-clamp">
+                                        <a href="#!">UI/UX design</a>
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/icons/star.svg"
+                                            alt="Star"
+                                        />
+                                        <span class="value">4.5</span>
+                                    </div>
+                                </div>
+
+                                <p class="desc line-clamp">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn book-btn">
+                                        Book now
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Course item 3 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/course-3.jpg"
+                                    alt="Basic web design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title line-clamp">
+                                        <a href="#!">Web App design</a>
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/icons/star.svg"
+                                            alt="Star"
+                                        />
+                                        <span class="value">4.5</span>
+                                    </div>
+                                </div>
+
+                                <p class="desc line-clamp">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn book-btn">
+                                        Book now
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--  -->
         </main>
     </body>
 </html>
