--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main style="height: 2000px">
+        <main style="height: 5000px">
             <!-- Header -->
             <header class="header fixed">
                 <div class="main-content">
@@ -155,7 +155,7 @@
                     <div class="popular-top">
                         <div class="info">
                             <h2 class="heading lv2">Our popular courses</h2>
-                            <p class="desc">
+                            <p class="desc line-clamp">
                                 Build new skills with new trendy courses and
                                 shine for the next future career.
                             </p>
@@ -210,8 +210,13 @@
                             </a>
                             <div class="info">
                                 <div class="head">
-                                    <h3 class="title line-clamp">
-                                        <a href="#!">Basic web design</a>
+                                    <h3 class="title">
+                                        <a
+                                            href="#!"
+                                            class="line-clamp beark-all"
+                                        >
+                                            Basic web design
+                                        </a>
                                     </h3>
                                     <div class="rating">
                                         <img
@@ -222,7 +227,7 @@
                                     </div>
                                 </div>
 
-                                <p class="desc line-clamp">
+                                <p class="desc line-clamp line-2 beark-all">
                                     Get the best course, gain knowledge and
                                     shine for your future career.
                                 </p>
@@ -247,8 +252,13 @@
                             </a>
                             <div class="info">
                                 <div class="head">
-                                    <h3 class="title line-clamp">
-                                        <a href="#!">UI/UX design</a>
+                                    <h3 class="title">
+                                        <a
+                                            href="#!"
+                                            class="line-clamp beark-all"
+                                        >
+                                            UI/UX design
+                                        </a>
                                     </h3>
                                     <div class="rating">
                                         <img
@@ -259,7 +269,7 @@
                                     </div>
                                 </div>
 
-                                <p class="desc line-clamp">
+                                <p class="desc line-clamp line-2 beark-all">
                                     Get the best course, gain knowledge and
                                     shine for your future career.
                                 </p>
@@ -284,8 +294,13 @@
                             </a>
                             <div class="info">
                                 <div class="head">
-                                    <h3 class="title line-clamp">
-                                        <a href="#!">Web App design</a>
+                                    <h3 class="title">
+                                        <a
+                                            href="#!"
+                                            class="line-clamp beark-all"
+                                        >
+                                            Web App design
+                                        </a>
                                     </h3>
                                     <div class="rating">
                                         <img
@@ -296,7 +311,7 @@
                                     </div>
                                 </div>
 
-                                <p class="desc line-clamp">
+                                <p class="desc line-clamp line-2 beark-all">
                                     Get the best course, gain knowledge and
                                     shine for your future career.
                                 </p>
@@ -307,6 +322,115 @@
                                         Book now
                                     </button>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Feedback -->
+            <div class="feedback">
+                <div class="main-content">
+                    <div class="feedback-list">
+                        <!-- feedback item 1 -->
+                        <div class="feedback-item">
+                            <div class="info">
+                                <img
+                                    src="./assets/img/avatar.jpg"
+                                    alt="Peter Moor"
+                                    class="avatar"
+                                />
+                                <p class="title">Peter Moor</p>
+                                <p class="desc">Student of Web Design</p>
+                                <div class="dots">
+                                    <span class="dot active"></span>
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                </div>
+                            </div>
+
+                            <div class="content">
+                                <img
+                                    src="./assets/icons/open-quotes.svg"
+                                    alt=""
+                                    class="open-quotes"
+                                />
+                                <blockquote>
+                                    Not only does my resume look
+                                    impressive—filled with the names and logos
+                                    of world-class institutions—but these
+                                    certificates also bring me closer to my
+                                    career goals by validating the skills I've
+                                    learned."
+                                </blockquote>
+                            </div>
+                        </div>
+
+                        <!-- feedback item 2 -->
+                        <div class="feedback-item">
+                            <div class="info">
+                                <img
+                                    src="./assets/img/avatar.jpg"
+                                    alt="Peter Moor"
+                                    class="avatar"
+                                />
+                                <p class="title">Peter Moor</p>
+                                <p class="desc">Student of Web Design</p>
+                                <div class="dots">
+                                    <span class="dot"></span>
+                                    <span class="dot active"></span>
+                                    <span class="dot"></span>
+                                </div>
+                            </div>
+
+                            <div class="content">
+                                <img
+                                    src="./assets/icons/open-quotes.svg"
+                                    alt=""
+                                    class="open-quotes"
+                                />
+                                <blockquote>
+                                    Not only does my resume look
+                                    impressive—filled with the names and logos
+                                    of world-class institutions—but these
+                                    certificates also bring me closer to my
+                                    career goals by validating the skills I've
+                                    learned."
+                                </blockquote>
+                            </div>
+                        </div>
+
+                        <!-- feedback item 2 -->
+                        <div class="feedback-item">
+                            <div class="info">
+                                <img
+                                    src="./assets/img/avatar.jpg"
+                                    alt="Peter Moor"
+                                    class="avatar"
+                                />
+                                <p class="title">Peter Moor</p>
+                                <p class="desc">Student of Web Design</p>
+                                <div class="dots">
+                                    <span class="dot"></span>
+                                    <span class="dot"></span>
+                                    <span class="dot active"></span>
+                                </div>
+                            </div>
+
+                            <div class="content">
+                                <img
+                                    src="./assets/icons/open-quotes.svg"
+                                    alt=""
+                                    class="open-quotes"
+                                />
+                                <blockquote>
+                                    Not only does my resume look
+                                    impressive—filled with the names and logos
+                                    of world-class institutions—but these
+                                    certificates also bring me closer to my
+                                    career goals by validating the skills I've
+                                    learned."
+                                </blockquote>
                             </div>
                         </div>
                     </div>
