--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                                 a promotion, a raise, or starting a new career.
                             </p>
                             <p class="desc">Lesson Impact Report (2022)</p>
-                            <a href="" class="btn cta-btn">Sign Up</a>
+                            <a href="" class="btn">Sign Up</a>
                         </div>
                     </div>
                 </div>
@@ -494,7 +494,218 @@
                     </div>
                 </div>
             </div>
-            <!--  -->
+
+            <!-- Blog -->
+            <div class="blog">
+                <div class="main-content">
+                    <div class="blog-top">
+                        <h2 class="heading lv2">Our blog</h2>
+                        <p class="desc">
+                            Read our regular travel blog and know the latest
+                            update of tour and travel
+                        </p>
+                    </div>
+
+                    <div class="blog-list">
+                        <!-- Blog 1 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="blog 1"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn cta-btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 2 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="blog 2"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021 </span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 3 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="blog 3"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 4 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="blog 4"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn cta-btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 5 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="blog 5"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021 </span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 6 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="blog 6"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 7 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="blog 7"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn cta-btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 8 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="blog 8"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021 </span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog 9 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="blog 9"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="dots center">
+                        <span class="dot active"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer -->
         </main>
     </body>
 </html>
