--- a/index.html
+++ b/index.html
@@ -22,44 +22,46 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main style="height: 5000px">
-            <!-- Header -->
-            <header class="header fixed">
-                <div class="main-content">
-                    <div class="body">
-                        <!-- Logo -->
+        <!-- Header -->
+        <header class="header fixed">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Logo -->
+                    <a href="#">
                         <img
                             src="./assets/img/logo.svg"
                             alt="Lesson."
                             class="logo"
                         />
+                    </a>
 
-                        <!-- Nav -->
-                        <nav class="nav">
-                            <ul>
-                                <li class="active">
-                                    <a href="#!">Home</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Courses</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Pricing</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Reviews</a>
-                                </li>
-                            </ul>
-                        </nav>
+                    <!-- Nav -->
+                    <nav class="nav">
+                        <ul>
+                            <li class="active">
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#Course">Courses</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Reviews</a>
+                            </li>
+                        </ul>
+                    </nav>
 
-                        <!-- Action -->
-                        <div class="action">
-                            <a href="#!" class="btn sign-up-btn">Sign Up</a>
-                        </div>
+                    <!-- Action -->
+                    <div class="action">
+                        <a href="#!" class="btn sign-up-btn">Sign Up</a>
                     </div>
                 </div>
-            </header>
+            </div>
+        </header>
 
+        <main>
             <!-- Hero -->
             <div class="hero">
                 <div class="main-content">
@@ -149,7 +151,7 @@
             </div>
 
             <!-- Popular -->
-            <div class="popular">
+            <div class="popular" id="Course">
                 <div class="main-content">
                     <!-- Popular top -->
                     <div class="popular-top">
@@ -462,7 +464,7 @@
                                 a promotion, a raise, or starting a new career.
                             </p>
                             <p class="desc">Lesson Impact Report (2022)</p>
-                            <a href="" class="btn">Sign Up</a>
+                            <a href="#!" class="btn cta-btn">Sign Up</a>
                         </div>
                     </div>
                 </div>
@@ -489,7 +491,7 @@
                                 full Coursera catalog.
                             </p>
 
-                            <a href="" class="btn cta-btn">Join Now</a>
+                            <a href="#!" class="btn cta-btn">Join Now</a>
                         </div>
                     </div>
                 </div>
@@ -704,8 +706,116 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Footer -->
         </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="main-content">
+                <div class="row">
+                    <div class="column">
+                        <a href="#">
+                            <img
+                                src="./assets/img/logo-white.svg"
+                                alt="Lesson."
+                                class="logo"
+                            />
+                        </a>
+                        <p class="desc">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <div class="social">
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/twitter.svg"
+                                    alt="Twitter"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/facebook.svg"
+                                    alt="Facebook"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/linked_in.svg"
+                                    alt="Linked in"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="./assets/icons/instagram.svg"
+                                    alt="Instagram"
+                                />
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <h3 class="title">Company</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Features</a>
+                            </li>
+                            <li>
+                                <a href="#!">Our Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Latest News</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="column">
+                        <h3 class="title">Support</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">FAQ’s</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="column">
+                        <h3 class="title">Address</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">
+                                    <strong>Location:</strong> 27 Division St,
+                                    New York, NY 10002, USA
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <strong>Email:</strong>
+                                    email@gmail.com
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <strong>Phone:</strong> + 000 1234 567 890
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <p class="copyright center">
+                    Copyright ©2022 webdesign.gdn All rights reserved
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
